moved to proper repo

--- a/bonus/hover-styles.html
+++ b/bonus/hover-styles.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Contact | Your Name</title>
+  <title>Hover Styling</title>
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -12,11 +12,11 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Jessica Zimel!</a>
+      <a href="#" id="logo">Your Name</a>
       <nav>
-        <a href="index.html">About Jessica!</a>
-        <a href="portfolio.html">Stuff She's Made!</a>
-        <a href="contact.html">Let's Get in Touch!</a>
+        <a href="#">About</a>
+        <a href="#">Portfolio</a>
+        <a href="#">Contact</a>
       </nav>
     </div>
   </header>
@@ -49,15 +49,16 @@
       <div id="connect">
         <h2>Connect with Me</h2>
 
-        <a href="https://www.facebook.com/jess.zimel"><img src="https://findicons.com/files/icons/2052/social_network/32/facebook.png" class="social" alt="Facebook" /></a>
-        
+        <img src="assets/images/github-128.png" class="social" alt="Github">
+        <img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn">
+        <img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow">
       </div>
     </section>
   </div>
 
   <footer>
     <div class="container">
-      Copyright &copy; 
+      Copyright &copy;
     </div>
   </footer>
 </body>
